<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_result_task_completed"
            android:textAlignment="textStart"
            android:textSize="@dimen/_35sdp"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_pushups_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/total_pushups"
            android:textAlignment="textStart"
            android:textSize="@dimen/_20sdp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/pushups_done_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/dialog_result_pushups_done"
            android:textAlignment="textStart"
            android:textSize="@dimen/_20sdp"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/pushups_left_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_result_pushups_left"
            android:textAlignment="textStart"
            android:textSize="@dimen/_20sdp"
            android:textStyle="italic|bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="0.5"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/button_round"
            android:onClick="Home"
            android:text="@string/home"
            android:textSize="@dimen/_20ssp"
            android:textAppearance="@android:style/Widget.Material.Button"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_weight="0.5"
            android:background="@drawable/button_round"
            android:onClick="Continue"
            android:text="@string/continue_pushups_button"
            android:textSize="@dimen/_20ssp"
            style=" ?android:attr/borderlessButtonStyle"
            android:textAppearance="@android:style/Widget.Material.Button"
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>