<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/background_dialog">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_goal_textview"
            android:textAlignment="center"
            android:textSize="@dimen/_20sdp"
            android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/edt_dialog_setGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_background"
                android:layout_marginTop="@dimen/_15sdp"
                android:hint="@string/set_goal_edittext_hint"
                android:padding="@dimen/_8sdp"
                android:inputType="number"
                android:importantForAutofill="no">
            <requestFocus/>
            </EditText>

        <Button
            android:id="@+id/btn_dialog_setGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_round"
            android:text="@string/set_goal_button"
            android:textSize="@dimen/_20ssp"
            android:textAppearance="@android:style/Widget.Material.Button" />
    </LinearLayout>