<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/dialog_round">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_goal_textview"
            android:textAlignment="center"
            android:textSize="@dimen/_20sdp"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:id="@+id/linearLayout_set_goal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/edittext_round"
            >

            <EditText
                android:id="@+id/getCount_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/set_goal_edittext_hint"
                android:inputType="number"
                android:importantForAutofill="no">
            <requestFocus/>
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/set_goal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/button_round"
            android:text="@string/set_goal_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>